<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/authorization_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/authorization_login_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/authorization_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/authorization_login_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/authorization_password_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/authorization_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/authorization_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/authorization_log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/authorization_log_in_label"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/authorization_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/authorization_new_account_label"
            android:textAlignment="center"
            android:textColor="#1565C0"
            android:textSize="20sp"
            android:textStyle="italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>