<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/publisher_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/publisher_image_label"
                android:padding="5sp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/publisher" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="10sp"
            android:text="@string/publisher_label"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/publisher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/publisher_name_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textColorHint="@color/hint"
            android:textSize="24sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/publisher_address_label"
                android:textColor="#000000"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/publisher_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/publisher_address_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/publisher_site_label"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/publisher_site"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:hint="@string/publisher_site_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:textColor="#000000"
                android:textColorHint="@color/hint"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <Button
            android:id="@+id/publisher_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/publisher_delete_button"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>

