<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/authorization_login_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profile_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/authorization_login_label"
            android:importantForAutofill="no"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/registration_email_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/registration_email_label"
            android:importantForAutofill="no"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profile_exit_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/profile_exit_label"
            android:padding="10dp"
            android:text="@string/profile_exit_label"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>